[package]
name = "gamesync_client"
version = "0.1.1"
authors = ["Maaz Qureshi", "Elly Wong"]
description = "Client-side multiplayer game networking library"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
message-io = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.11"
