[package]
name = "gamesync_server"
version = "0.1.3"
authors = ["Maaz Qureshi", "Elly Wong"]
description = "Server-side multiplayer game networking library"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
message-io = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "6.1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
