[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
gamesync_client = "0.1.3"
uuid = "1.11.0"
tokio = {version= "1.41", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
serde_json = "1.0.132"
colored = "2.1.0"
serde = { version = "1.0.210", features = ["derive"] }